--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -172,12 +172,16 @@
   </div>
   <%# /商品一覧 %>
 </div>
-<% if user_signed_in? %>
-  <div class='purchase-btn'>
-    <span class='purchase-btn-text'>出品する</span>
-    <a href= /items/new >
+<div class='purchase-btn'>
+  <span class='purchase-btn-text'>出品する</span>
+    <% if user_signed_in? %>
+      <a href= /items/new >
       <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-    </a>
+      </a>
+    <% else%>
+      <a href= "/">
+      <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+      </a>
+    <% end %>
   </div>
-<% end %>
 <%= render "shared/footer" %>
