--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -78,20 +78,26 @@
     </div>
   </div>
   <%# /商品の概要 %>
-
+  
   <div class="comment-box">
-    <form>
-      <textarea class="comment-text"></textarea>
-      <p class="comment-warn">
-        相手のことを考え丁寧なコメントを心がけましょう。
-        <br>
-        不快な言葉遣いなどは利用制限や退会処分となることがあります。
-      </p>
-      <button type="submit" class="comment-btn">
+    <% if user_signed_in? %>
+      <%= form_with model:[@comment,@item], url:item_commnts_path(@item), local: true do |f| %>
+        <%= f.text_area :text, class:"comment-text" %>
+        <%= f.label :text, "相手のことを考え丁寧なコメントを心がけましょう。", class:"comment-warn" %><br>
+        <%= f.label :text, "不快な言葉遣いなどは利用制限や退会処分となることがあります。", class:"comment-warn"%>
+        <%= f.submit "submit", class:"comment-btn" %>
         <%= image_tag "comment.png" ,class:"comment-flag-icon" ,width:"20",height:"25"%>
-        <span>コメントする<span>
-      </button>
-    </form>
+      <% end %>
+    <% else %>
+      <p>コメントの投稿には新規登録・ログインが必要です</p>
+    <% end %>
+    <% if @comments %>
+      <% @comments.each do |comment| %>
+        <p>
+          <%= comment.text %>
+        <p>
+      <% end %>
+    <% end %>
   </div>
   <div class="links">
     <a href="#" class="change-item-btn">
