コメントした日時を追加

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -91,12 +91,15 @@
     <% else %>
       <p>コメントの投稿には新規登録・ログインが必要です</p>
     <% end %>
-    <li class="comments">
+    <li class="comment_list">
     <% if @comments %>
       <% @comments.each do |comment| %>
-        <div>
+        <div class="comments">
           <%= comment.user.nickname %>:
           <%= comment.comment %>
+        </div>
+        <div class="comment_time">
+          <%= comment.created_at.to_s(:datetime_jp) %>
         </div>
       <% end %>
     <% end %>
