--- a/app/assets/stylesheets/items/show.css
+++ b/app/assets/stylesheets/items/show.css
@@ -139,11 +139,18 @@
 
 
 /* /商品の概要 */
-.comments {
-  font-size: 20px;
+.comment_list{
+  list-style: none;
   text-align: left;
   margin-left: 35%;
-  list-style: none;
+}
+
+.comments {
+  font-size: 20px;
+}
+
+.comment_time {
+  font-size: 10px;
 }
 
 .comment-box {
